Add exception handling (#30)
* Add initial error handling structure

* Add exceptions (dbupdate and custom ObjectNotFound exception) to handler and set all repository/service methods to return non-nullable values (return exception for null value)

--- a/API/SOC.Repository/SOC.Repository.csproj
+++ b/API/SOC.Repository/SOC.Repository.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SOC.DataContracts\SOC.DataContracts.csproj" />
+    <ProjectReference Include="..\SOC.Common\SOC.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
